Try to fix build
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -180,3 +180,7 @@ _UI_State_generator_feature = Generator
 _UI_State_exporter_feature = Exporter
 _UI_State_installer_feature = Installer
 _UI_State_loader_feature = Loader
+_UI_State_generators_feature = Generators
+_UI_State_exporters_feature = Exporters
+_UI_State_installers_feature = Installers
+_UI_State_loaders_feature = Loaders
