--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -8,6 +8,7 @@
 		<product.version>0.8.1-SNAPSHOT</product.version>
 		<tycho.version>1.5.1</tycho.version>
 		<tycho.extras.version>${tycho.version}</tycho.extras.version>
+		<enforcer.plugin.version>3.0.0-M3</enforcer.plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.osgi.framework.system.capabilities>
 			osgi.ee;osgi.ee="JavaSE";version:List="1.0,1.1,1.2,1.3,1.4,1.5,1.6,1.7,1.8,9,10,11"
@@ -116,8 +117,11 @@
 							<configuration>
 								<rules>
 									<requireMavenVersion>
-										<version>3.6.3</version>
+										<version>[3.6.3,)</version>
 									</requireMavenVersion>
+									<requireJavaVersion>
+										<version>[11,)</version>
+									</requireJavaVersion>
 								</rules>
 							</configuration>
 						</execution>
