--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 - cp toolchains.xml ~/.m2/toolchains.xml
 - "mvn -N io.takari:maven:0.7.7:wrapper -Dmaven=${MAVEN_VERSION}"
 script: 
- - ./mvnw install -B -V
+ - mvn install -B -V
  - mvn clean verify
 before_deploy:
   - mvn package -Dmaven.test.skip=true
