--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -8,6 +8,7 @@
 		<product.version>0.8.1-SNAPSHOT</product.version>
 		<tycho.version>1.5.1</tycho.version>
 		<tycho.extras.version>${tycho.version}</tycho.extras.version>
+		<mvn.version>3.6.3</mvn.version>
 		<enforcer.plugin.version>3.0.0-M3</enforcer.plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.osgi.framework.system.capabilities>
