--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,11 @@ cache:
   - "$HOME/.m2"
 before_install:
 - cp toolchains.xml ~/.m2/toolchains.xml
-- "mvn -N io.takari:maven:0.7.7:wrapper -Dmaven=${MAVEN_VERSION}"
+- wget http://apache.mirror.gtcomm.net/maven/maven-3/3.6.3/binaries/apache-maven-3.6.3-bin.tar.gz
+- tar xzvf apache-maven-3.6.3-bin.tar.gz
+- export PATH=`pwd`/apache-maven-3.6.3/bin:$PATH
+- mvn -v
 script: 
- - mvn install -B -V
  - mvn clean verify
 before_deploy:
   - mvn package -Dmaven.test.skip=true
