Replace EPackage with EObject
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -184,3 +184,11 @@ _UI_State_generators_feature = Generators
 _UI_State_exporters_feature = Exporters
 _UI_State_installers_feature = Installers
 _UI_State_loaders_feature = Loaders
+_UI_Strategy_type = Strategy
+_UI_State_strategy_feature = Strategy
+_UI_Strategy_generators_feature = Generators
+_UI_Strategy_exporters_feature = Exporters
+_UI_Strategy_installers_feature = Installers
+_UI_Strategy_loaders_feature = Loaders
+_UI_Strategy_state_feature = State
+_UI_ClassMakerService_initializing_feature = Initializing
