--- a/bundles/org.enterprisedomain.workbench.ide/build.properties
+++ b/bundles/org.enterprisedomain.workbench.ide/build.properties
@@ -1,7 +1,8 @@
-source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                plugin_customization.ini,\
-               splash.bmp
+               splash.bmp,\
+               Application.e4xmi
+source.. = src/
