--- a/bundles/org.enterprisedomain.workbench.ide/build.properties
+++ b/bundles/org.enterprisedomain.workbench.ide/build.properties
@@ -3,6 +3,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                plugin_customization.ini,\
-               splash.bmp,\
-               Application.e4xmi
+               splash.bmp
 source.. = src/
