--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -17,6 +17,7 @@
 				<version>${tycho.version}</version>
 				<configuration>
 					<executionEnvironment>JavaSE-11</executionEnvironment>
+					<resolver>p2</resolver>
 					<dependency-resolution>
 						<profileProperties>
 							<org.eclipse.swt.buildtime>true</org.eclipse.swt.buildtime>
@@ -24,8 +25,8 @@
 						</profileProperties>
 						<extraRequirements>
 							<requirement>
-								<type>eclipse-plugin</type>
-								<id>org.eclipse.osgi.compatibility.state</id>
+								<type>eclipse-feature</type>
+								<id>org.eclipse.e4.rcp</id>
 								<versionRange>0.0.0</versionRange>
 							</requirement>
 							<requirement>
