--- a/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/build.properties
+++ b/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/build.properties
@@ -1,3 +1,3 @@
 bin.includes = feature.xml,\
-               feature.properties,\
-               p2.inf
+               p2.inf,\
+               feature.properties
