--- a/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/pom.xml
+++ b/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/pom.xml
@@ -1,12 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project>
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.enterprisedomain</groupId>
+	<artifactId>org.enterprisedomain.classmaker.osgi.resolverhooks.feature</artifactId>
+	<packaging>eclipse-feature</packaging>
+	<version>0.8.1-SNAPSHOT</version>
+
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain.features</artifactId>
 		<version>0.8.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>org.enterprisedomain.classmaker.osgi.resolverhooks.feature</artifactId>
-	<packaging>eclipse-feature</packaging>
 </project>
