--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,4 +21,5 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
+      run: cp toolchains.xml ~/.m2/toolchains.xml
       run: mvn -B package --file pom.xml      
