--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Build with Maven
-      run: cp toolchains.xml ~/.m2/toolchains.xml
+    - name: Copy toolchain
+        cp toolchains.xml ~/.m2/toolchains.xml
+    - name: Build with Maven      
       run: mvn -B package --file pom.xml      
