--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - uses: actions/checkout@v2
     - name: Copy toolchain
-        run: cp toolchains.xml ~/.m2/toolchains.xml
+      run: cp toolchains.xml ~/.m2/toolchains.xml
     - name: Build with Maven      
-        run: mvn -B package --file pom.xml      
+      run: mvn -B package --file pom.xml      
