--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,8 @@ jobs:
       with:
         java-version: 11
     - uses: actions/checkout@v2
+    - name: Echo JAVA_HOME
+      run: echo $JAVA_HOME
     - name: Copy toolchain
       run: cp toolchains.xml ~/.m2/toolchains.xml
     - name: Build with Maven      
