--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,4 +26,13 @@ jobs:
       run: mvn -B package --file pom.xml      
     - name: action-upload-bintray
       uses: bpicode/github-action-upload-bintray@v0.9.0
-
+      with:
+        api_user: kyrillzotkin
+        api_key: ${{ secrets.BINTRAY_API_KEY }} 
+        repository_user: kyrillzotkin
+        repository: ClassMaker
+        package: ClassMaker
+        version: '0.8.1'
+        upload_path: releng/org.enterprisedomain.update/target/org.enterprisedomain.update-0.8.1-SNAPSHOT.zip 
+        publish: 1
+        calculate_metadata: true
