--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Build with Maven      
       run: mvn -B package --file pom.xml      
     - name: Maven Deploy
-      run: mvn deploy -Dregistry=https://maven.pkg.github.com/enterpriseDomain -Dtoken={{secrets.GITHUB_TOKEN}}  
+      run: mvn deploy -Dregistry=https://maven.pkg.github.com/enterpriseDomain -Dtoken=${{ secrets.GITHUB_TOKEN }}  
