--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,5 +24,10 @@ jobs:
       run: cp toolchains.xml ~/.m2/toolchains.xml
     - name: Build with Maven      
       run: mvn -B package --file pom.xml      
+    - name: maven-settings-xml-action
+      uses: whelk-io/maven-settings-xml-action@v5
+      with:
+        repositories: '[{ "id": "central", "url": "https://repo1.maven.org/maven2", { "releases": { "enabled": "true" }}, { "snapshots": {"enabled": "true"}}}, { "id": "github", "url": "https://maven.pkg.github.com/enterpriseDomain/ClassMaker/" }]'
+        servers: '[{ "id": "github", "username": "kyrillzotkin", "password": "${{ secrets.GITHUB_TOKEN }}" }]'
     - name: Maven Deploy
       run: mvn deploy -Dregistry=https://maven.pkg.github.com/enterpriseDomain -Dtoken=${{ secrets.GITHUB_TOKEN }}  
