--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.enterprisedomain</groupId>
-	<artifactId>org.enterprisedomain.configuration</artifactId>
+	<artifactId>configuration</artifactId>
 	<version>0.8.1-SNAPSHOT</version>
 	<properties>
 		<product.version>0.8.1-SNAPSHOT</product.version>
