--- a/tests/org.enterprisedomain.classmaker.tests/pom.xml
+++ b/tests/org.enterprisedomain.classmaker.tests/pom.xml
@@ -1,15 +1,15 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.enterprisedomain</groupId>
-	<artifactId>org.enterprisedomain.tests.root</artifactId>
+	<artifactId>org.enterprisedomain.tests</artifactId>
 	<version>0.0.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.root</artifactId>
+		<artifactId>org.enterprisedomain</artifactId>
 		<version>0.8.1-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath></relativePath>
 	</parent>
 
 	<build>
@@ -41,8 +41,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<modules>
-		<module>org.enterprisedomain.classmaker.tests</module>
-	</modules>
 </project>
