--- a/bundles/org.enterprisedomain.classmaker.edit/pom.xml
+++ b/bundles/org.enterprisedomain.classmaker.edit/pom.xml
@@ -5,11 +5,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>eclipse-plugin</packaging>
 	<artifactId>org.enterprisedomain.classmaker.edit</artifactId>
-	<version>0.8.1-SNAPSHOT</version>
-	<groupId>org.enterprisedomain</groupId>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.bundles</artifactId>
+		<artifactId>org.enterprisedomain</artifactId>
 		<version>0.8.1-SNAPSHOT</version>
+		<relativePath></relativePath>
 	</parent>	
 </project>
