--- a/bundles/org.enterprisedomain.classmaker/pom.xml
+++ b/bundles/org.enterprisedomain.classmaker/pom.xml
@@ -1,13 +1,13 @@
-<project
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.enterprisedomain</groupId>
 	<artifactId>org.enterprisedomain.classmaker</artifactId>
-	<version>0.8.1-SNAPSHOT</version>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.bundles</artifactId>
+		<artifactId>org.enterprisedomain</artifactId>
 		<version>0.8.1-SNAPSHOT</version>
+		<relativePath></relativePath>		
 	</parent>
 	<packaging>eclipse-plugin</packaging>
 </project>
