--- a/bundles/org.enterprisedomain.ecp/pom.xml
+++ b/bundles/org.enterprisedomain.ecp/pom.xml
@@ -4,11 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.bundles</artifactId>
+		<artifactId>org.enterprisedomain</artifactId>
 		<version>0.8.1-SNAPSHOT</version>
+		<relativePath></relativePath>
 	</parent>
-	<groupId>org.enterprisedomain</groupId>
 	<artifactId>org.enterprisedomain.ecp</artifactId>
 	<packaging>eclipse-plugin</packaging>
-	<version>0.8.1-SNAPSHOT</version>
 </project>
