--- a/bundles/org.enterprisedomain.workbench.ide/pom.xml
+++ b/bundles/org.enterprisedomain.workbench.ide/pom.xml
@@ -4,13 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.bundles</artifactId>
+		<artifactId>org.enterprisedomain</artifactId>
 		<version>0.8.1-SNAPSHOT</version>
+		<relativePath></relativePath>
 	</parent>
 
 	<artifactId>org.enterprisedomain.workbench.ide</artifactId>
-
-	<packaging>eclipse-plugin</packaging>
-	<version>0.8.1-SNAPSHOT</version>
-	<groupId>org.enterprisedomain</groupId>
+	<packaging>eclipse-plugin</packaging>	
 </project>
