--- a/features/org.enterprisedomain.classmaker.ecp.feature/pom.xml
+++ b/features/org.enterprisedomain.classmaker.ecp.feature/pom.xml
@@ -4,12 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>eclipse-feature</packaging>
-	<groupId>org.enterprisedomain</groupId>
 	<artifactId>org.enterprisedomain.classmaker.ecp.feature</artifactId>
-	<version>0.8.1-SNAPSHOT</version>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
+		<artifactId>org.enterprisedomain</artifactId>
 		<version>0.8.1-SNAPSHOT</version>
-		<artifactId>org.enterprisedomain.features</artifactId>
+		<relativePath></relativePath>
 	</parent>
 </project>
