--- a/releng/org.enterprisedomain.update/pom.xml
+++ b/releng/org.enterprisedomain.update/pom.xml
@@ -1,12 +1,13 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.releng</artifactId>
+		<artifactId>org.enterprisedomain</artifactId>
 		<version>0.8.1-SNAPSHOT</version>
+		<relativePath></relativePath>
 	</parent>
 	<artifactId>org.enterprisedomain.update</artifactId>
-	<version>0.8.1-SNAPSHOT</version>
 	<packaging>eclipse-repository</packaging>
 	<build>
 		<pluginManagement>
@@ -22,7 +23,6 @@
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-publisher-plugin</artifactId>
-				<version>${tycho.version}</version>
 				<configuration>
 					<publish-categories>true</publish-categories>
 				</configuration>
