Some more updates
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/tests/org.enterprisedomain.classmaker.tests/pom.xml
+++ b/tests/org.enterprisedomain.classmaker.tests/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain</artifactId>
-		<version>0.8.1-SNAPSHOT</version>
+		<version>0.8.1-SNAPSHOT</version><relativePath>./pom.xml</relativePath>
 	</parent>
 
 	<build>
