--- a/bundles/org.enterprisedomain.workbench.ide/pom.xml
+++ b/bundles/org.enterprisedomain.workbench.ide/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain</artifactId>
-		<version>0.8.1-SNAPSHOT</version>
+		<version>0.8.1-SNAPSHOT</version><relativePath>./pom.xml</relativePath>
 	</parent>
 
 	<artifactId>org.enterprisedomain.workbench.ide</artifactId>
