--- a/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/pom.xml
+++ b/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/pom.xml
@@ -7,8 +7,9 @@
 	
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain</artifactId>
-		<version>0.8.1-SNAPSHOT</version><relativePath>./pom.xml</relativePath>
+		<artifactId>bundles</artifactId>
+		<version>0.8.1-SNAPSHOT</version>
+		<relativePath>../../</relativePath>
 	</parent>
 
 </project>
