--- a/features/org.enterprisedomain.ui.workbench.rcp.feature/pom.xml
+++ b/features/org.enterprisedomain.ui.workbench.rcp.feature/pom.xml
@@ -7,7 +7,8 @@
 	<artifactId>org.enterprisedomain.ui.workbench.rcp.feature</artifactId>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain</artifactId>
-		<version>0.8.1-SNAPSHOT</version><relativePath>./pom.xml</relativePath>
+		<artifactId>bundles</artifactId>
+		<version>0.8.1-SNAPSHOT</version>
+		<relativePath>../../</relativePath>
 	</parent>
 </project>
