--- a/releng/org.enterprisedomain.workbench.ide.product/pom.xml
+++ b/releng/org.enterprisedomain.workbench.ide.product/pom.xml
@@ -8,8 +8,9 @@
 	<version>0.8.1-SNAPSHOT</version>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain</artifactId>
-		<version>0.8.1-SNAPSHOT</version><relativePath>./pom.xml</relativePath>
+		<artifactId>bundles</artifactId>
+		<version>0.8.1-SNAPSHOT</version>
+		<relativePath>../../</relativePath>
 	</parent>
 	<build>
 		<plugins>
