--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>org.enterprisedomain</artifactId>
+	<artifactId>bundles</artifactId>
 	<packaging>pom</packaging>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
@@ -45,5 +45,5 @@
 				<surefire.moduleProperties>--add-modules=ALL-SYSTEM</surefire.moduleProperties>
 			</properties>
 		</profile>
-	</profiles>		
+	</profiles>	
 </project>
