--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Java CD with Maven
 
 on:
   push:
@@ -22,9 +22,7 @@ jobs:
         java-version: 11
     - name: Copy toolchain
       run: cp toolchains.xml ~/.m2/toolchains.xml
-    - name: Build with Maven      
-      run: mvn -B package --file pom.xml      
-    - name: Maven Deploy
-      run: mvn deploy --settings settings.xml -Dregistry=https://maven.pkg.github.com/enterpriseDomain -Dtoken=${{ secrets.GITHUB_TOKEN }}
+    - name: Deploy with Maven
+      run: mvn -B deploy --settings settings.xml -Dregistry=https://maven.pkg.github.com/enterpriseDomain -Dtoken=${{ secrets.GITHUB_TOKEN }}
       env: 
         PAT: ${{ secrets.GITHUB_TOKEN }}  
