--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Copy toolchain
       run: cp toolchains.xml ~/.m2/toolchains.xml
     - name: Build with Maven      
-      run: mvn -B package --file pom.xml      
+      run: mvn clean -B package --file pom.xml      
     - name: Deploy with Maven
-      run: mvn -B deploy --settings settings.xml -Dmaven.wagon.http.pool=false  -Dregistry=https://maven.pkg.github.com/enterpriseDomain -Dtoken=${{ secrets.GITHUB_TOKEN }}
+      run: mvn -B deploy --settings settings.xml -Dregistry=https://maven.pkg.github.com/enterpriseDomain -Dtoken=${{ secrets.GITHUB_TOKEN }}
       env: 
         PAT: ${{ secrets.GITHUB_TOKEN }}  
