--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<version>0.8.1-SNAPSHOT</version>
 		<relativePath>./releng/org.enterprisedomain.configuration</relativePath>
 	</parent>
+    <scm><url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker/</url></scm>
 
 	<modules>
 		<module>bundles/org.enterprisedomain.classmaker</module>
