--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.enterprisedomain</groupId>
@@ -191,4 +192,11 @@
 		</dependency>
 	</dependencies>
 	<packaging>pom</packaging>
+	<distributionManagement>
+	    <repository>
+     	  	<id>github</id>
+	       	<name>GitHub enterpriseDomain Apache Maven Packages</name>
+     	   	<url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker/</url>
+        </repository>
+	</distributionManagement>
 </project>
