--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,8 +26,8 @@ jobs:
       run: mvn -B clean package --file pom.xml      
     - name: Deploy with Maven
       env:
-        DEPLOY_KEY: ${{ secrets.deploy_key }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         mkdir -p ~/.m2
-        echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><settings xmlns=\"http://maven.apache.org/SETTINGS/1.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd\"><servers><server><id>github</id><username>x-access-token</username><password>"+$DEPLOY_KEY+"</password></server><server><id>github-snapshot</id><username>x-access-token</username><password>"+$DEPLOY_KEY+"</password></server><server><id>github-release</id><username>x-access-token</username><password>"+$DEPLOY_KEY+"</password></server></servers></settings>" > ~/.m2/settings.xml
+        echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><settings xmlns=\"http://maven.apache.org/SETTINGS/1.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd\"><servers><server><id>github</id><username>x-access-token</username><password>${GITHUB_TOKEN}</password></server><server><id>github-snapshot</id><username>x-access-token</username><password>${GITHUB_TOKEN}</password></server><server><id>github-release</id><username>x-access-token</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
         mvn -B deploy      
