Try renaming product
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/releng/org.enterprisedomain.workbench.ide.product/pom.xml
+++ b/releng/org.enterprisedomain.workbench.ide.product/pom.xml
@@ -3,8 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.enterprisedomain</groupId>
-	<artifactId>org.enterprisedomain.workbench.ide.product</artifactId>
+	<artifactId>org.enterprisedomain.workbench.product</artifactId>
 	<packaging>eclipse-repository</packaging>
 	<version>0.8.1-SNAPSHOT</version>
 	<parent>
@@ -39,7 +38,7 @@
 				<configuration>
 					<products>
 						<product>
-							<id>workbench.ide.product</id>
+							<id>workbench.product</id>
 						</product>
 					</products>
 				</configuration>
