--- a/releng/org.enterprisedomain.workbench.ide.product/.project
+++ b/releng/org.enterprisedomain.workbench.ide.product/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.enterprisedomain.workbench.ide.product</name>
+	<name>org.enterprisedomain.workbench.product</name>
 	<comment></comment>
 	<projects>
 	</projects>
