--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -61,15 +61,6 @@
 				</executions>
 			</plugin>
 			<plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-		        <version>3.2.0</version>
-		        <configuration>
-		          <descriptors>
-            	      <descriptor>.mvn/assembly.xml</descriptor>
-          		  </descriptors>
-		        </configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
 				<version>${tycho.version}</version>
@@ -193,6 +184,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		<finalName>@{artifactId}@-@{version}@@{dashClassifier?}@.@{extension}</finalName>
 	</build>
 	<dependencies>
 		<dependency>
