--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -58,6 +58,14 @@
 							<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
 						</configuration>
 					</execution>
+					<execution>
+						<phase>package</phase>
+						<id>package-plugin</id>
+						<configuration>
+							<appendAssemblyId>false</appendAssemblyId>	
+							<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 			<plugin>
@@ -183,8 +191,7 @@
 					</configuration>
 				</plugin>
 			</plugins>
-		</pluginManagement>
-		<finalName>@{artifactId}@-@{version}@@{dashClassifier?}@.@{extension}</finalName>
+		</pluginManagement>		
 	</build>
 	<dependencies>
 		<dependency>
