--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Build with Maven      
       run: mvn -B clean package --file pom.xml      
     - name: Deploy with Maven
-      shell: bash      
+      shell: bash
       env:
         PAT: ${{ secrets.PAT }}
       run: |
         mkdir -p ~/.m2
-        echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><settings xmlns=\"http://maven.apache.org/SETTINGS/1.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd\"><servers><server><id>github</id><username>x-access-token</username><password>${env.PAT}</password></server><server><id>github-snapshot</id><username>x-access-token</username><password>${env.PAT}</password></server><server><id>github-release</id><username>x-access-token</username><password>${env.PAT}</password></server></servers></settings>" > ~/.m2/settings.xml
+        echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><settings xmlns=\"http://maven.apache.org/SETTINGS/1.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd\"><servers><server><id>github</id><username>x-access-token</username><password>$PAT</password></server><server><id>github-snapshot</id><username>x-access-token</username><password>$PAT</password></server><server><id>github-release</id><username>x-access-token</username><password>$PAT</password></server></servers></settings>" > ~/.m2/settings.xml
         mvn -B clean deploy      
